# ArunaCLI

./: Cargo.toml  README.md  go.mod  go.sum  main.go
cmd/: adduser.go  create.go  describe.go  download.go  ls.go  releaseversion.go  root.go  upload.go
example/: create_dataset.json  create_project.json  gffobjectgroup.json  objectgroup.json  refobjectgroup.json
src/: main.rs
src/client/: client.rs
src/create/: create.rs
src/describe/: describe.rs
src/download/: download_handler.rs  download_path_handler.rs
src/events/: events.rs
src/load/: load.rs  mod.rs
src/ls/: ls.rs
src/update/: update.rs
src/util/: cli.rs  config.rs
subcmd/: create.go  load.go  ls.go  userhandling.go  util.go
