[package]
name = "storagedbcli"
version = "0.1.0"
edition = "2021"
author = "Marius Dieckmann"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.4", features = ["derive"]}
scienceobjectsdb_rust_api = { git = "https://github.com/ScienceObjectsDB/rust-api" }
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
prost = "0.9"
prost-types = "0.9"
serde_yaml = "0.8"
directories = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
tokio-util = "0.6"
bytes = "1"