[package]
author = "Marius Dieckmann"
edition = "2021"
name = "storagedbcli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1"
async-stream = "0.3"
bytes = "1"
clap = {version = "3.0.0-rc.11", features = ["derive"]}
console-subscriber = "0.1"
directories = "4"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
prost = "0.9"
prost-types = "0.9"
reqwest = {version = "0.11", features = ["stream"]}
scienceobjectsdb_rust_api = "0.3.0-alpha.2"#{git = "https://github.com/ScienceObjectsDB/rust-api"}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"
sled = "0.34"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.6"
tonic = {version = "0", features = ["tls", "tls-roots"]}
